solved and issue of link between js and html

--- a/index.html
+++ b/index.html
@@ -9,20 +9,14 @@
 <body>
     <div class="container">
         <div class="todo-app">
-     <h2>To-Do List<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJLMBw7nYnX6cZ57Okws4BV6PxLXEffT5WgQ&s" alt=""> </h2>
-     <div class="row">
-        <input type="text" id="input-box" placeholder="Add your text here">
-        <button onclick="addTask()">add</button>
-     </div>
-    <!--<ul id="list-container">
-        <li class="checked">Task 1</li>
-        <li class="checked">Task 2</li>
-        <li class="checked">Task 3</li>
-     </ul> -->
-
+            <h2>To-Do List<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQJLMBw7nYnX6cZ57Okws4BV6PxLXEffT5WgQ&s" alt=""></h2>
+            <div class="row">
+                <input type="text" id="input-box" placeholder="Add your text here">
+                <button onclick="addTask()">Add</button>
+            </div>
+            <ul id="list-container"></ul>
+        </div>
     </div>
-    </div>
-
 
     <script src="scripts/index.js"></script>
 </body>
